# free-cake-mobile

./: .gitignore  AGENTS.md  LICENSE  PRD.md  README.md  deploy.sh  dev.sh  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml
client/deploy/: nginx.conf
client/src/: App.tsx
docs/: 01-product-overview.md  02-market-research.md  03-business-rules.md  04-technical-solution.md  05-system-architecture.md  06-data-model.md  07-delivery-plan.md  08-risk-and-compliance.md  09-ui-design.md  README.md
docs/agent/: architecture.md  conventions.md  development_commands.md
mobile/: .env.example  App.tsx  app.json  babel.config.js  package.json  pnpm-lock.yaml  tsconfig.json
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile
server/src/: config.rs  errors.rs  lib.rs  main.rs
server/src/app_middleware/: auth.rs  error_handler.rs  limit_body.rs  metrics.rs  mod.rs  public_rate_limit.rs  rate_limit.rs  request_id.rs  security_headers.rs
server/src/db/: mod.rs  models.rs
server/src/db/migrations/: 001_init.sql  002_foreign_keys.sql  003_phone_encrypted.sql  004_payment_schema.sql  005_production_task_extensions.sql  006_order_traceability.sql  007_activity_rule_decoration.sql  008_activity_rule_status.sql  009_activity_banner_url.sql
server/src/handlers/: activity.rs  auth.rs  dashboard.rs  entry.rs  inventory.rs  mod.rs  order.rs  price.rs  production.rs  query_handlers.rs  redeem.rs  region.rs  reports.rs  settlement.rs  staff_handler.rs  store.rs  template.rs  upload.rs  user.rs  vote.rs
server/src/services/: ai_generator.rs  audit_log.rs  crypto.rs  mod.rs  notification.rs  rank_cache.rs  reconciliation.rs  risk_control.rs  sms.rs  storage.rs  validation.rs  wechat_pay.rs
server/tests/: activity_test.rs  auth_test.rs  entry_test.rs  integration_tests.rs  inventory_test.rs  order_test.rs  redeem_test.rs  settlement_test.rs  vote_test.rs
(+130 files in other folders)
