[package]
name = "free-cake-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
axum-test = "16"
