[package]
name = "free-cake-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
pem = "3"
x509-parser = "0.16"
rsa = { version = "0.9", features = ["sha2", "pem"] }
num-bigint-dig = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
axum-test = "16"
